added customization for web views

--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,8 @@ owner:
   telegram: #username
   wikipedia: #username
   custom:
+    - url: http://github.com/bilardi/leonids/
+      icon: fa-code
     - url: http://github.com/renyuanz/leonids/
       icon: fa-code-fork
 
